some aria correction

--- a/public/index.html
+++ b/public/index.html
@@ -20,7 +20,7 @@
           <p class="description">theme </p>
           <div class="switch-container">
             <p class="switchvalues-container"><span class="switchvalue switchvalue--one">1</span><span class="switchvalue switchvalue--two">2</span><span class="switchvalue switchvalue--third">3</span></p>
-            <input class="theme-switch" id="theme-switch" type="range" name="themeswitch" min="1" max="3">
+            <input class="theme-switch" id="theme-switch" type="range" name="themeswitch" min="1" max="3" aria-label="theme selector switch">
           </div>
         </div>
       </div>
